hphp/test/zend/bad/Zend/tests/errmsg_027.php
<?php

class test {
	function foo() {
		class test2 {
		}
	}
}

echo "Done\n";
?>